i created a documentation for a get request that filters products by id,then returns a 200 or a 400
